--- a/templates/includes/sharing.html
+++ b/templates/includes/sharing.html
@@ -1,5 +1,5 @@
   <hr />
-  <div class="well well-sm">  <!-- Social media sharing buttons -->
+  <div class="card card-sm">  <!-- Social media sharing buttons -->
     {% if TWITTER_USERNAME %}
     <!-- Twitter -->
     <a href="https://twitter.com/share" class="twitter-share-button" 
