--- a/templates/includes/taglist.html
+++ b/templates/includes/taglist.html
@@ -1,6 +1,6 @@
 <div class="article-tag-list">
 {% if article.tags %}
-<span class="label label-default">Tags</span>
+<span class="tag tag-default">Tags</span>
 {% for tag in article.tags %}
 	<a href="{{ SITEURL }}/{{ tag.url }}"><i class="fa fa-tag"></i>{{ tag }}</a>&nbsp;
 {% endfor %}
