--- a/templates/includes/translations.html
+++ b/templates/includes/translations.html
@@ -1,5 +1,5 @@
 {% if article.translations %}
-<span class="label label-default">Lang</span>
+<span class="tag tag-default">Lang</span>
 {% for translation in article.translations %}
 	<a href="{{ SITEURL }}/{{ translation.url }}"><i class="fa fa-edit"></i>{{ translation.lang }}</a>
 {% endfor %}
