--- a/templates/index.html
+++ b/templates/index.html
@@ -52,43 +52,44 @@
 {% endblock article %}
 
 {% block pagination %}
-<nav class="index-pager">
+<nav aria-label="Page navigation">
   {% if articles_page and articles_paginator.num_pages > 1 %}
 	<ul class="pagination">
 	{% if articles_page.has_previous() %}
-		<li class="prev">
-		  <a href="{{ SITEURL }}/{{ articles_previous_page.url }}">
+		<li class="page-item">
+		  <a class="page-link" href="{{ SITEURL }}/{{ articles_previous_page.url }}">
 			<i class="fa fa-chevron-circle-left fa-fw fa-lg"></i> Previous
 		  </a>
 		</li>
 	{% else %}
-        <li class="prev disabled"><span>
-            <i class="fa fa-chevron-circle-left fa-fw fa-lg"></i> 
-            Previous</span>
+        <li class="page-item"><span>
+		  <a class="page-link disabled" href="{{ SITEURL }}/{{ articles_previous_page.url }}">
+			<i class="fa fa-chevron-circle-left fa-fw fa-lg"></i> Previous
+		  </a>
         </li>
 	{% endif %}
 
     {% for num in articles_paginator.page_range %}
-      {% if num == articles_page.number %}
-        <li class="active"> <span>{{ num }}</span> </li>
-      {% else %}
-        <li>
-          <a href="{{ SITEURL }}/{{ articles_paginator.page(num).url }}">{{ num }}</a>
+      <li class="page-item">
+        {% if num == articles_page.number %}
+          <a class="page-link active" href="{{ SITEURL }}/{{ articles_paginator.page(num).url }}">{{ num }}</a>
+        {% else %}
+          <a class="page-link" href="{{ SITEURL }}/{{ articles_paginator.page(num).url }}">{{ num }}</a>
+        {% endif %}
         </li>
-      {% endif %}
     {% endfor %}
 
-	{% if articles_page.has_next() %}
-		<li class="next">
-		  <a href="{{ SITEURL }}/{{ articles_next_page.url }}">
+	<li class="page-item">
+	    {% if articles_page.has_next() %}
+		  <a class="page-link" href="{{ SITEURL }}/{{ articles_next_page.url }}">
 			Next <i class="fa fa-chevron-circle-right fa-fw fa-lg"></i>
 		  </a>
-		</li>
-	{% else %}
-        <li class="next disabled">
-          <span><i class="fa fa-chevron-circle-right fa-fw fa-lg"></i> Next</span>
-        </li>
-	{% endif %}
+        {% else %}
+		  <a class="page-link disabled" href="{{ SITEURL }}/{{ articles_next_page.url }}">
+			Next <i class="fa fa-chevron-circle-right fa-fw fa-lg"></i>
+		  </a>
+        {% endif %}
+	</li>
 	</ul>
   {% endif %}
 
