add home and top buttons and spacing to footer

--- a/templates/index.html
+++ b/templates/index.html
@@ -91,6 +91,18 @@
         {% endif %}
 	</li>
 	</ul>
+    <div class="home-top">
+        <a class="btn btn-sm btn-primary" href="http://sevag.io/" rel="home">
+            <i class="fa fa-home fa-fw fa-lg">
+            </i>
+            Home
+        </a>
+        <a class="btn btn-sm btn-primary" href="#top">
+            <i class="fa fa-angle-double-up fa-fw fa-lg">
+            </i>
+            Top
+        </a>
+    </div>
   {% endif %}
 
 </nav> <!-- /index-pager -->
