--- a/templates/base.html
+++ b/templates/base.html
@@ -160,7 +160,7 @@
       {% include 'includes/' + CUSTOM_FOOTER|default('footer.html') ignore missing %} 
       {% if SKIP_COLOPHON %}
       {% else %}
-      <div id="footer-content" class="container footer-content">
+      <div id="footer-content" class="container">
       <address id="site-colophon">
         <p class="text-muted">
         Created by <a href="http://sevag.io">Sevag Hanssian</a>, powered by <a href="http://blog.getpelican.com/">Pelican</a> and <a href="https://github.com/sevagh/pelican-bootstrap4">Bootstrap 4</a>, hosted on <a href="https://aws.amazon.com/">AWS</a>.
