--- a/templates/index.html
+++ b/templates/index.html
@@ -55,19 +55,17 @@
 <nav aria-label="Page navigation">
   {% if articles_page and articles_paginator.num_pages > 1 %}
 	<ul class="pagination">
-	{% if articles_page.has_previous() %}
-		<li class="page-item">
+	  <li class="page-item">
+	    {% if articles_page.has_previous() %}
 		  <a class="page-link" href="{{ SITEURL }}/{{ articles_previous_page.url }}">
 			<i class="fa fa-chevron-circle-left fa-fw fa-lg"></i> Previous
 		  </a>
-		</li>
-	{% else %}
-        <li class="page-item"><span>
-		  <a class="page-link disabled" href="{{ SITEURL }}/{{ articles_previous_page.url }}">
+	    {% else %}
+		  <a class="page-link disabled" aria-disabled="true" href="{{ SITEURL }}/{{ articles_previous_page.url }}">
 			<i class="fa fa-chevron-circle-left fa-fw fa-lg"></i> Previous
 		  </a>
-        </li>
-	{% endif %}
+	    {% endif %}
+      </li>
 
     {% for num in articles_paginator.page_range %}
       <li class="page-item">
@@ -85,7 +83,7 @@
 			Next <i class="fa fa-chevron-circle-right fa-fw fa-lg"></i>
 		  </a>
         {% else %}
-		  <a class="page-link disabled" href="{{ SITEURL }}/{{ articles_next_page.url }}">
+		  <a class="page-link disabled" aria-disabled="true" href="{{ SITEURL }}/{{ articles_next_page.url }}">
 			Next <i class="fa fa-chevron-circle-right fa-fw fa-lg"></i>
 		  </a>
         {% endif %}
