--- a/templates/archives.html
+++ b/templates/archives.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Archives - {{ SITENAME }}{% endblock %}
 {% block metadesc %}{{ SITETAGALT }} Archive of Posts{% endblock %}
-{% block archive_active %}active{% endblock %}
+{% block archive_active %}navactive{% endblock %}
 
 {% block    custom_header %}
 {% if CUSTOM_HEADER_ARCHIVES %}
