--- a/templates/base.html
+++ b/templates/base.html
@@ -29,14 +29,7 @@
     <title>{% block title %}{{ SITENAME }} - {{ SITETAG|escape }}{% endblock %}</title>
 
     {% if not SKIP_DEFAULT_CSS %}   
-      {% if BOOTSTRAP_STYLESHEET %} 
-        <link rel="stylesheet" href="{{ SITEURL }}/theme/css/{{ BOOTSTRAP_STYLESHEET }}" />
-      {% else %}
-        <link rel="stylesheet"
-              href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-              integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-              crossorigin="anonymous" />
-      {% endif %}
+        <link rel="stylesheet" href="{{ SITEURL }}/theme/css/bootstrap.min.css" />
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
     {% endif %}
 
@@ -70,51 +63,48 @@
   </head>
 
   <body>
-{% if not SKIP_DEFAULT_NAVIGATION %}   
-    <nav class="navbar navbar-default" role="navigation">
-      <div class="container">
-	   <div class="navbar-header">
-		<button type="button" class="navbar-toggle" 
-				data-toggle="collapse" data-target="#main-navbar-collapse">
-		  <span class="sr-only">Toggle navigation</span>
-		  <span class="icon-bar"></span>
-		  <span class="icon-bar"></span>
-		  <span class="icon-bar"></span>
-		</button>
-		<a class="navbar-brand" href="{{ SITEURL }}/" rel="home">
-          <i class="fa fa-home fa-fw fa-lg"> </i> {{ HOME_LABEL|default('') }}</a>
-       </div>
 
-      <div class="collapse navbar-collapse" id="main-navbar-collapse">
-        <ul class="nav navbar-nav">
+{% if not SKIP_DEFAULT_NAVIGATION %}   
+<nav class="navbar navbar-default">
+    <div class="container">
+  <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#collapsing-navbar" aria-controls="#collapsing-navbar" aria-expanded="false" aria-label="Toggle navigation">
+    &#9776;
+  </button>
+  <div class="collapse navbar-toggleable-xs" id="collapsing-navbar">
+      <a class="navbar-brand" href="{{ SITEURL }}" rel="home">
+          <i class="fa fa-home fa-fw fa-lg"> </i> {{ HOME_LABEL|default('') }}</a>
+      </a>
+    <ul class="nav navbar-nav">
+
           {% for title, link in MENUITEMS %}
-            <li><a href="{{ link }}">{{ title }}</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ link }}">{{ title }}</a></li>
           {% endfor %}
           {% if DISPLAY_PAGES_ON_MENU %}
             {% for item in PAGES %}
               {% if page is defined and page.url == item.url %}
-              <li class="active">
+              <li class="nav-item navactive">
               {% else %}
-              <li>
+              <li class="nav-item">
               {% endif %}
-                <a href="{{ SITEURL }}/{{ item.url }}">{{ item.title }}</a>
+                <a class="nav-link" href="{{ SITEURL }}/{{ item.url }}">{{ item.title }}</a>
               </li>
             {% endfor %}
-            <li class="divider"></li>
           {% endif %}
-            <li class="{% block archive_active %}{% endblock %}">
-              <a href="{{ SITEURL }}/{{ ARCHIVES_URL|default('archives.html') }}">Archives</a>
+            <li class="nav-item {% block archive_active %}{% endblock %}">
+              <a class="nav-link" href="{{ SITEURL }}/{{ ARCHIVES_URL|default('archives.html') }}">Archives</a>
             </li>
-          <li class="divider"></li>
           {% if FEED_ALL_ATOM %}
-            <li><a href="{{ FEED_DOMAIN }}/{{ FEED_ALL_ATOM }}" 
+            <li class="nav-item"><a class="nav-link" href="{{ FEED_DOMAIN }}/{{ FEED_ALL_ATOM }}" 
                    type="application/atom+xml" rel="alternate">
                 <i class="fa fa-rss fa-fw fa-lg"></i> </a></li>
           {% endif %}
-        </ul> <!-- /nav -->
-      </div> <!-- /navbar-collapse -->
-	  </div> <!-- /container -->
-    </nav> <!-- /navbar -->
+
+
+
+    </ul>
+  </div>
+    </div>
+</nav>
 {% endif %}
 
     {% for file in CUSTOM_SITE_HEADERS %}
@@ -176,13 +166,7 @@
     <!-- javascript -->
     {% if not SKIP_DEFAULT_JS %}   
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-      {% if BOOTSTRAP_JS %} 
-        <script src="{{ SITEURL }}/theme/js/{{ BOOTSTRAP_JS }}" />
-      {% else %}
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-            crossorigin="anonymous"></script>
-      {% endif %}
+        <script src="{{ SITEURL }}/theme/js/bootstrap.min.js" />
     {% endif %}
 
     {% for url in JAVASCRIPT_URLS %}
