--- a/templates/showcase_page.html
+++ b/templates/showcase_page.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block showcase_active %}navactive{% endblock %}
 {% block title %}{{ showcase_page.title }}{% endblock %}
 {% block content %}
 <section id="content" class="body">
