--- a/templates/base.html
+++ b/templates/base.html
@@ -71,11 +71,12 @@
     &#9776;
   </button>
   <div class="collapse navbar-toggleable-xs" id="collapsing-navbar">
-      <a class="navbar-brand" href="{{ SITEURL }}" rel="home">
+    <ul class="nav navbar-nav">
+      <li class="nav-item">
+      <a class="nav-link" href="{{ SITEURL }}" rel="home">
           <i class="fa fa-home fa-fw fa-lg"> </i> {{ HOME_LABEL|default('') }}</a>
       </a>
-    <ul class="nav navbar-nav">
-
+    </li>
           {% for title, link in MENUITEMS %}
             <li class="nav-item"><a class="nav-link" href="{{ link }}">{{ title }}</a></li>
           {% endfor %}
@@ -101,9 +102,6 @@
                    type="application/atom+xml" rel="alternate">
                 <i class="fa fa-rss fa-fw fa-lg"></i> </a></li>
           {% endif %}
-
-
-
     </ul>
   </div>
     </div>
@@ -167,9 +165,9 @@
     {% include 'includes/disqus_script.html' %}
 
     <!-- javascript -->
-    {% if not SKIP_DEFAULT_JS %}   
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script src="{{ SITEURL }}/theme/js/bootstrap.min.js" />
+    {% if not SKIP_DEFAULT_JS %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
+    <script src="{{ SITEURL }}/theme/js/bootstrap.min.js"></script>
     {% endif %}
 
     {% for url in JAVASCRIPT_URLS %}
