add tether and category link

--- a/templates/includes/article_header_date.html
+++ b/templates/includes/article_header_date.html
@@ -1,3 +1,5 @@
 <abbr class="article-header-date">
-  {{ article.locale_date }}
+    {{ article.locale_date }}
+
+    <a href="{{ SITEURL }}/category/{{ article.category }}.html">&emsp;<i class="fa fa-folder"></i> {{ article.category }}</a>
 </abbr> 
