re-add link in jumbotron

--- a/templates/includes/jumbotron.html
+++ b/templates/includes/jumbotron.html
@@ -1,6 +1,6 @@
 	<div class="jumbotron" id="overview">
 	  <div class="container">
-		<h1>{{ SITENAME }}</h1>
+          <h1><a class="orangelink" href="{{ SITEURL }}">{{ SITENAME }}</a></h1>
         {% if SITESUBTITLE %}
 		<p class="lead">{{ SITESUBTITLE }}</p>
         {% endif %}
