--- a/templates/showcase_entry.html
+++ b/templates/showcase_entry.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}{{ showcase.title }}{% endblock %}
-{% block content %}
+{% block content_body %}
 <section id="content" class="body">
     <h1 class="entry-title">{{ showcase.title }}</h1>
     <h3><a href="{{ showcase.repository }}">source code <i class="icon-external-link"></i></a></h3>
