fix breadcrumbs and adjust hometop

--- a/templates/archives.html
+++ b/templates/archives.html
@@ -20,9 +20,9 @@
 {% include "includes/" + CUSTOM_CONTENT_TOP_ARCHIVES %}
 {% endif %}
 <ol class="breadcrumb">
-  <li><a href="{{ SITEURL }}/" title="Home">
+  <li class="breadcrumb-item"><a href="{{ SITEURL }}/" title="Home">
 	  <i class="fa fa-home fa-fw fa-lg"></i> </a></li>
-  <li class="active">Archives</li>
+  <li class="breadcrumb-item navactive">Archives</li>
 </ol>
 {% endblock content_header %}
 
