--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,11 @@
     <title>{% block title %}{{ SITENAME }} - {{ SITETAG|escape }}{% endblock %}</title>
 
     {% if not SKIP_DEFAULT_CSS %}   
+    {% if BOOTSTRAP_STYLESHEET %} 
+        <link rel="stylesheet" href="{{ SITEURL }}/theme/css/{{ BOOTSTRAP_STYLESHEET }}" />
+      {% else %}
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" integrity="sha384-2hfp1SzUoho7/TsGGGDaFdsuuDL0LX2hnUp6VkX3CUQ2K4K+xjboZdsXyp4oUHZj" crossorigin="anonymous">
+      {% endif %}
         <link rel="stylesheet" href="{{ SITEURL }}/theme/css/bootstrap.min.css" />
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
     {% endif %}
@@ -182,7 +187,11 @@
     {% if not SKIP_DEFAULT_JS %}
     <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
+    {% if BOOTSTRAP_JS %}
     <script src="{{ SITEURL }}/theme/js/bootstrap.min.js"></script>
+    {% else %}
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/js/bootstrap.min.js" integrity="sha384-VjEeINv9OSwtWFLAtmc4JCtEJXXBub00gtSnszmspDLCtC0I4z4nqz7rEFbIZLLU" crossorigin="anonymous"></script>
+    {% endif %}
     {% endif %}
 
     {% for url in JAVASCRIPT_URLS %}
