remove static bootstrap files and link to about page

--- a/templates/base.html
+++ b/templates/base.html
@@ -163,7 +163,7 @@
               <a href="#top"><i class="fa fa-angle-double-up fa-fw fa-lg"></i>Top</a>
               </li>
               <li class="breadcrumb-item">
-                  <a class="orangelink" href="{{ SITEURL }}">{{ AUTHOR }}</a>
+                  <a class="orangelink" href="{{ SITEURL }}/pages/about.html">{{ AUTHOR }}</a>
               </li>
               <li class="breadcrumb-item">
                   <a class="orangelink" href="http://blog.getpelican.com/">Pelican</a> 
