--- a/templates/article.html
+++ b/templates/article.html
@@ -90,6 +90,15 @@
     {% include "includes/" + file %}
   {% endfor %}
 
+  {% if article.related_posts %}
+   <h2>Related posts</h2>
+   <ul>
+       {% for related_post in article.related_posts %}
+        <li><a href="{{ SITEURL }}/{{ related_post.url }}">{{ related_post.title }}</a></li>
+        {% endfor %}
+   </ul>
+   {% endif %}
+
   {% if DISQUS_SITENAME and SITEURL and article.status != "draft" %}
   <div class="comments">
 	<h2>Comments</h2>
