move period outside of link in article_infos category

--- a/templates/includes/article_header_info.html
+++ b/templates/includes/article_header_info.html
@@ -6,7 +6,7 @@
     {% endif %}
     in 
     <a href="{{ SITEURL }}/{{ article.category.url }}">
-      {{ article.category }}.</a>
+      {{ article.category }}</a>.
     {% if article.tags %}
     Tags: 
       {% for tag in article.tags %}
