--- a/templates/base.html
+++ b/templates/base.html
@@ -71,10 +71,10 @@
 {% if not SKIP_DEFAULT_NAVIGATION %}   
 <nav class="navbar navbar-default">
     <div class="container">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsing-navbar" aria-controls="#collapsing-navbar" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#collapsing-navbar" aria-controls="#collapsing-navbar" aria-expanded="false" aria-label="Toggle navigation">
     &#9776;
   </button>
-  <div class="collapse" id="collapsing-navbar">
+  <div class="collapse navbar-toggleable-xs" id="collapsing-navbar">
     <ul class="nav navbar-nav">
       <li class="nav-item">
       <a class="nav-link" href="{{ SITEURL }}" rel="home">
