--- a/templates/showcase_page.html
+++ b/templates/showcase_page.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block showcase_active %}navactive{% endblock %}
+{% block showcase_active %}active{% endblock %}
 {% block title %}{{ showcase_page.title }}{% endblock %}
 {% block content_body %}
 <section id="content" class="body">
