--- a/templates/tag.html
+++ b/templates/tag.html
@@ -26,7 +26,7 @@
 {% else %}
     <li class="breadcrumb-item">Tags </li>
 {% endif %}
-    <li class="breadcrumb-item navactive">{{ tag }}</li>
+    <li class="breadcrumb-item breadcrumbactive">{{ tag }}</li>
 </ol>
 {% endblock content_header %}
 
