--- a/templates/archives.html
+++ b/templates/archives.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Archives - {{ SITENAME }}{% endblock %}
 {% block metadesc %}{{ SITETAGALT }} Archive of Posts{% endblock %}
-{% block archive_active %}navactive{% endblock %}
+{% block archive_active %}active{% endblock %}
 
 {% block    custom_header %}
 {% if CUSTOM_HEADER_ARCHIVES %}
@@ -22,7 +22,7 @@
 <ol class="breadcrumb">
   <li class="breadcrumb-item"><a href="{{ SITEURL }}/" title="Home">
 	  <i class="fa fa-home fa-fw fa-lg"></i> </a></li>
-  <li class="breadcrumb-item navactive">Archives</li>
+  <li class="breadcrumb-item breadcrumbactive">Archives</li>
 </ol>
 {% endblock content_header %}
 
