--- a/templates/author.html
+++ b/templates/author.html
@@ -19,14 +19,14 @@
 {% include "includes/" + CUSTOM_CONTENT_TOP_AUTHOR %}
 {% endif %}
 <ol class="breadcrumb">
-    <li><a href="{{ SITEURL }}/" title="Home" rel="home">
+    <li class="breadcrumb-item"><a href="{{ SITEURL }}/" title="Home" rel="home">
 		<i class="fa fa-home fa-fw fa-lg"></i> </a></li>
 {% if AUTHORS_URL %}
-    <li><a href="{{ SITEURL }}/{{ AUTHORS_URL }}">Authors </a></li>
+    <li class="breadcrumb-item"><a href="{{ SITEURL }}/{{ AUTHORS_URL }}">Authors </a></li>
 {% else %}
-    <li>Authors </li>
+    <li class="breadcrumb-item">Authors </li>
 {% endif %}
-    <li class="active">{{ author }}</li>
+    <li class="breadcrumb-item breadcrumbactive">{{ author }}</li>
 </ol>
 {% endblock content_header %}
 
