--- a/templates/base.html
+++ b/templates/base.html
@@ -69,25 +69,23 @@
   <body>
 
 {% if not SKIP_DEFAULT_NAVIGATION %}   
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-dark bg-inverse">
     <div class="container">
-  <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#collapsing-navbar" aria-controls="#collapsing-navbar" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" href="{{ SITEURL }}" rel="home">
+          <i class="fa fa-home fa-fw fa-lg"> </i> {{ HOME_LABEL|default('') }}</a>
+      </a>
+  <button class="navbar-toggler hidden-sm-up whitebtn" type="button" data-toggle="collapse" data-target="#collapsing-navbar" aria-controls="#collapsing-navbar" aria-expanded="false" aria-label="Toggle navigation">
     &#9776;
   </button>
   <div class="collapse navbar-toggleable-xs" id="collapsing-navbar">
     <ul class="nav navbar-nav">
-      <li class="nav-item">
-      <a class="nav-link" href="{{ SITEURL }}" rel="home">
-          <i class="fa fa-home fa-fw fa-lg"> </i> {{ HOME_LABEL|default('') }}</a>
-      </a>
-    </li>
           {% for title, link in MENUITEMS %}
             <li class="nav-item"><a class="nav-link" href="{{ link }}">{{ title }}</a></li>
           {% endfor %}
           {% if DISPLAY_PAGES_ON_MENU %}
             {% for item in PAGES %}
               {% if page is defined and page.url == item.url %}
-              <li class="nav-item navactive">
+              <li class="nav-item active">
               {% else %}
               <li class="nav-item">
               {% endif %}
