--- a/templates/category.html
+++ b/templates/category.html
@@ -26,7 +26,7 @@
 {% else %}
     <li class="breadcrumb-item">Categories </li>
 {% endif %}
-    <li class="breadcrumb-item navactive">{{ category }}</li>
+    <li class="breadcrumb-item breadcrumbactive">{{ category }}</li>
 </ol>
 {% endblock content_header %}
 
