--- a/templates/base.html
+++ b/templates/base.html
@@ -150,9 +150,8 @@
       {% else %}
       <div id="footer-content" class="customfooter">
           <div class="container">
-      <address id="site-colophon">
-          <ol class="breadcrumb" style="background-color: #373a3c">
             <small>
+          <ol class="breadcrumb breadcrumbcust">
               <li class="breadcrumb-item">
               <a href="{{ SITEURL }}/" rel="home">
                   <i class="fa fa-home fa-fw fa-lg"></i>Home</a>
@@ -170,7 +169,7 @@
                   Hosted on <a href="https://aws.amazon.com/">AWS</a>
               </li>
           </ol>
-        </address><!-- /colophon  -->
+            </small>
           </div>
       </div>
       {% endif %}
