remove rounded edges from navbar

--- a/templates/base.html
+++ b/templates/base.html
@@ -69,7 +69,7 @@
   <body>
 
 {% if not SKIP_DEFAULT_NAVIGATION %}   
-<nav class="navbar navbar-dark bg-inverse">
+<nav class="navbar navbar-dark bg-inverse navbarcust">
     <div class="container">
     <a class="navbar-brand" href="{{ SITEURL }}" rel="home">
           <i class="fa fa-home fa-fw fa-lg navcolor"> </i> {{ HOME_LABEL|default('') }}</a>
